@@ -21,27 +21,25 @@ DIST policycoreutils-extra-1.33.tar.bz2 16191 SHA256 743c3930277102f5545907314b2
 EBUILD policycoreutils-2.2.5-r4.ebuild 4708 SHA256 2287c153ef9ce72a15e1fb0d681942c79c26393dfa00436b414389334606b5e4 SHA512 d69a0cd51e9e995f59535e6e72a3e62d4a5e3f75aeb8a98f9e6dd6ce7f02b4ca19d479395bcfccdeba7b932c484bc90308a3f563d621c0f3f626c4aa5b927c5a WHIRLPOOL c34a44c55bc221274f3f19e8f72fbf1d649b16978d6d080ff66ba47185b0bc7e069431a818ebce1fd23ef590f656fa23e86ebef42bca870050ff2a792bf20072
 EBUILD policycoreutils-2.3-r2.ebuild 4348 SHA256 46b1814453fef44d27a90c818d4948e5a448967b5b3305f71017da9788ff18ea SHA512 8ac7acafb331a746ef03bfb016b098425cd0c6f25fb02b20c79f22d4f82a97cdd4c272f27a289a0172b375002a6a3bc3f1f4e4b2f27d6fba52a7bc26819ff8fd WHIRLPOOL 41bd78021c5ac52e4778d5b0648c8af6f5e40298d71446486e2b1ed5da9183c4b8b337850b59f1a275823c536b4eb22800dacfaf656911a5288d61ae65d35d29
 EBUILD policycoreutils-2.3-r3.ebuild 4388 SHA256 2b87e99e95421c093aed5fca66c6506261ded68dccc11d309f7e106947664093 SHA512 b00da0cb9bae1f3aa4149b178bf904a90133b7aa7985635c342cb0f5a9e135b3ebb82e14cfdc224684820c1d4085cb8532023793440eaa5e1df8f3f130887b35 WHIRLPOOL 3c8fb7ed0c0ca20985b2f6556a95e623cd04bf83c53822cacfd7702bab50ac55f025ddb15d20799292f4dfdeee702112abf80e269b5493eac128eb9f2df3dfa7
-EBUILD policycoreutils-2.4.ebuild 5129 SHA256 21ff11675b8398a3a6612f71eb9ded2a134583e0d6a008a4e7d61407a2695589 SHA512 a0acb6911ce1f69bf421dd621e683aa28f6be82cd928367d11fb060e4f7fc1c57a8897b08c7bb760f66654af1e83cddf10f1fd04864dc9ca1f70c7e293d4d74c WHIRLPOOL 1a4cb5a000e0227cdd1f23b26e97ba548024ae6ebdf2526432fdf8c7bf5c354fe2cb7fafbb6fdb9d6e60fdbe2cd64f1e6d7646a060e2e8b5fc4c322f7e6279e9
+EBUILD policycoreutils-2.4.ebuild 5199 SHA256 60a5c8ed0d12dbc6494e5ec64912cffb3e65682e5d03c88e91bf327da5e57b17 SHA512 b22e5ee33e00774176c2ad113783773307a3f07269588816ddf386382c6fd82f371e8b5bf86a84725e035c6bd076c4b7095ef30f10ffe1986f2c02507991f54b WHIRLPOOL 7ac5e1451215f8d69d3b3d813852e4c9675073764686eceb3a5c03ea4f6da661a2cfcded6b3e8dd978b44b0344970a8779775988dd3aed1c5fe71010f45bb8d5
 EBUILD policycoreutils-2.4_rc6-r1.ebuild 5658 SHA256 d1e1140248b4b7946b55ab3fc5155d92fc7b02212dca63a98bf25616a59a98d0 SHA512 8a2bc4e2a7ac90b6a5874d54c70e354e324f868984b46e38858da75a32b98b8602b62455f0d23b188ae3130be258052606989dfaf25c7a18c8ec2396ee2fa276 WHIRLPOOL 94554fef9e727d9c6b2485d2681212199dd374f4a64371c604f096988874c862c98b9ea461c0e87c5d6dd5db52f70d8a0610240b564549b756381765199fea73
 EBUILD policycoreutils-2.4_rc7.ebuild 5126 SHA256 9e21cd374e5580060128f7aa9ad7419759c43c253789e2ac051d86758c0ab94d SHA512 0734b373f7b52eb7ec27a940203c9dff21b3aa95a2c13f4686b638a42c67925dcc92a63e655480359bd53ea85e5f956d64568d686d87bc9e1999a324279af828 WHIRLPOOL f053ec1d1a5a7e48afc127d207227c1dfdb8c839067b2c4bad8fd188b9156600cf954b8a5b42a6c359f8c035624d4c6863fd8b1653261fca60ea2fe882a2c6c4
-MISC ChangeLog 25871 SHA256 4b18d0ae42641458d013375c6c6f7929949bb930ed77abfae4c65963b8e188d3 SHA512 baae270c47c4d48bf5be18524dba187743f1e9acd8891d4ff4d7e6714336e336b13f2b6bd237022f2fec9ec183be295b9ee163441f9e8318421a2c31b3b8073a WHIRLPOOL 980fee90fb5b78eece14db20443a3a232819cb76ed4b0c2714e3b611552c03891b964bcb91e1bafc5a993a79332f6e0e9f8662e0d58afa3282c8083e3a316249
+MISC ChangeLog 25986 SHA256 b109c6aa54614a756ab79218712cf80b12afad4758f616ad1c40e186165cfa09 SHA512 9ca5e81d0b7096405a3a16ed3c3c782105314146367a468e213f102a0777ce31be998afe61981d88a786d848ceb16168a3217fa4a42e253645d698b5c48f7166 WHIRLPOOL 4ed2aff74a29eebd5bddbc2123328651385c12a8a122710106e694702273d037b8b9fc23ddf8e60524297a6f2b862175df97fda7eb746c0fd8482cb883dee448
 MISC metadata.xml 971 SHA256 9d2157deddd1a457ff3d7b1232ec23e71367852b743ef6b4b8290349c3c9c698 SHA512 79fbbb6285a75f84fdd103ed704d62ede2695e7b8fe03f989ac4a065261a5e870675c1186173c1d4a65b88ac98f8bc2153146010513926e1a1b53efa52564a03 WHIRLPOOL eadde5fe3a3a2a71031d46f7e7c602f8069138914e62c44dff4be09afb8e23391a36d7c358a011722151437ee51be9f404ee1360a2d918078de3f783ff7e062f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ7BAEBCABmBQJU1Fl3XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRFMTYyREVBRDFDQ0REMTEzRjA0QjNENDky
-QkJFRDlDQjFBNjhFRjU1AAoJECu+2csaaO9Vrp8P91nHfLqRK7bWs2chE80mWF1X
-do19Q9fnOGLCLN+/IvTUc0u57zN09E238jjW0/Q2xttPcEW6WHCQ86XCFI3XIr4s
-igimNYLmnt0ARx4R5rYRscgHvB8tuysKKYGwlMDDUWWeS/Ygdo8r+UVB/huvwciJ
-Ecm45EDdALBteFFLJjt8QzvqfHNuAeXhBFeGHjyNVaMJfr6wfowRogMtFhwYNC3o
-RtEgWKG4WP3DUJ7yS69M3N/sfIOUKM4ZTFHhRzbYiCH5XjUaIVlwHSuFdT0FTU2Y
-odP6JYuUlzZv8BfJkNzQp121IGjiNahM+CbOZzBdCd9+cIKukgnyK3pEIoF4zWvK
-YUS3gllOSA13XB+h2sEWTJi9pgARxiNgt8pMJkspXnTZBTeIO/rjtp6GTMMm8Hwh
-Kz0CTg0pzD8ZQcukgjQsN00Meq1q0LjC701Le0smE7iLLlz3if/xxuOl/CPdJROn
-5O3JcwGaNy250B3dcQpFy67S73nD6vXI/ERooEBoT7yh5yIsGCbs7SoOFqWk2vNT
-ehzgbmQWxvlHonzAkpdRvhmLDqvz1veSJMvqcxm2LG7wtudfYgr1jAa5UMq3AA5N
-Xs9k0/EA1DwSNMqxX5NmIiV2L2cmA7ZN8tuhvFYDF23Jl6hJ3loEfagbKOqlqrAw
-MMapaZQFZ0udo8Ix1rQ=
-=BkDY
+iQIcBAEBCAAGBQJU9y1NAAoJEC7dUkA7aK9H3kUP/0ez/v+c5NOdypEwd10hPsQz
+ZA10rI3f5ydQJOsX5PiQAhW4BmOSW2N4wS9MwSNWL4ZXMQRjBbr2a9Jf1m7MMw/w
+IXAUbW0fmqaxg1ee69UveQi+LOEUGqD0HKct4ahk8OJiRxyClp0Akvu9zT4Oo5+D
+M8ln4+njF/l4txoLE5Z+eOmebY/7u7bZF6v+LKx5A82prIfzIWHHROeMltaOD1Be
+znxcZKtz+6gsbA3P+7zpOM6cUvEX+B7ukg1DQ4XrCqYhZHsZ0xIlk7Sw8q9Xi2nP
+Kbz9gU9mXIXxeG6gre+IBqrJOL+9+zexawAUDLTQp9S3Pxw0k3pR7Wou8i1X90cr
+Mv4W1gy31qK3y29rqxHuQ4M6NbLtBlqhTeG91o1KCmkL3VMNXTJCDN+ymiFa1Nmw
+rLKKl8czQ6FAkYr6XWzSfuKoRTS1ITyRjH6mK9nz7BO5GIlcTOprhsWRT8sOBHOs
+NrA7XeM7XuRokr0l+8YBmFoTfY4Dpm2pjz2o9uRtIQmBOZGNytOc9y3YukbrajeA
+KyWyvNEu8wF7l/YqEPLd9N05ZlsEhJlSnmtz5fu9N003aXK3jDMDe8fCFbAZc1n6
+3zX7sB31z+0lPbXKsXvtZpZ/neQjfUhOxPXKNEjCrzXGTy1WB9PltkPczxW/ZKJ0
+9t6kpTy21LXa/hvNY362
+=U8pp
 -----END PGP SIGNATURE-----
