@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/policycoreutils-2.4.ebuild,v 1.1 2015/02/04 17:48:40 perfinion Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/policycoreutils-2.4.ebuild,v 1.2 2015/03/04 16:05:39 swift Exp $
 
 EAPI="5"
 PYTHON_COMPAT=( python2_7 )
@@ -82,7 +82,15 @@ src_prepare() {
 
 src_compile() {
 	building() {
-		emake -C "${BUILD_DIR}" AUDIT_LOG_PRIVS="y" AUDITH="$(usex audit)" PAMH="$(usex pam)" INOTIFYH="$(usex dbus)" SESANDBOX="n" CC="$(tc-getCC)" PYLIBVER="${EPYTHON}"
+		emake -C "${BUILD_DIR}" \
+			AUDIT_LOG_PRIVS="y" \
+			AUDITH="$(usex audit)" \
+			PAMH="$(usex pam)" \
+			INOTIFYH="$(usex dbus)" \
+			SESANDBOX="n" \
+			CC="$(tc-getCC)" \
+			PYLIBVER="${EPYTHON}" \
+			LIBDIR="\$(PREFIX)/$(get_libdir)"
 	}
 	S="${S1}" # Regular policycoreutils
 	python_foreach_impl building
